Fixed a bug with options wrapping.

--- a/css/editorstyle.css
+++ b/css/editorstyle.css
@@ -104,6 +104,11 @@ html {
   border: 2px solid #c7c7c7;
 }
 
+.options {
+  white-space: nowrap;
+  overflow: hidden;
+}
+
 .option-title {
   position: relative;
   float: left;
@@ -117,7 +122,7 @@ html {
 
 .option {
   position: relative;
-  float: left;
+  display: inline-block;
   color: #000;
   top: 0rem;
   left: 0rem;
